--- a/Css/style.css
+++ b/Css/style.css
@@ -3,8 +3,8 @@ body{
     margin: 0;
     display: block;
 }
+/* Social */
 .socialDiv{
-    
     top:0px;
     left:0px;
     width:100%;
@@ -12,11 +12,57 @@ body{
     display: flex;
     align-items: end;
     justify-content: end;    
-    background-color: rgb(0, 110, 255);
-    border-bottom: 2px seagreen solid;
-
+    background-color: rgb(44, 118, 216);
+}
+.socLinks{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    height: 100%;
 }
 .socialImg{
     width:30px;
     margin-right: 10px;
+}
+/* My Img */
+.myImg{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.profileImg{
+    width:160px;
+    border: ridge 2px rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+}
+/* Body */
+.bodyWrap{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+/* About Me div */
+.aboutMeDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+    text-align: start;
+    width: 100%;
+    height: 100%;
+    text-align: start;
+}
+.aboutMeBtn{
+    width: 100%;
+    height: 50px;
+    background-color:rgb(44, 118, 216);
+    color:white;
+    font-size: 1.2em;
 }
