--- a/Css/style.css
+++ b/Css/style.css
@@ -54,6 +54,7 @@ body{
     justify-content: center;
     align-items: center;
     justify-content: center;
+    margin-top: 2px;
     text-align: start;
     width: 100%;
     height: 100%;
