--- a/Css/style.css
+++ b/Css/style.css
@@ -2,6 +2,7 @@ body{
     padding: 0;
     margin: 0;
     display: block;
+    background-color: aqua;
 }
 /* Social */
 .socialDiv{
@@ -46,6 +47,7 @@ body{
     align-items: center;
     justify-content: center;
     margin-top: 10px;
+    background-color: aqua;
 }
 /* About Me div */
 .aboutMeDiv{
@@ -59,11 +61,25 @@ body{
     width: 100%;
     height: 100%;
     text-align: start;
+    padding: 5px;
+    background-color: aquamarine;
+    margin: 5px;
+    border: 1px solid black;
 }
 .aboutMeBtn{
-    width: 100%;
+    width: 80%;
     height: 50px;
     background-color:rgb(44, 118, 216);
     color:white;
     font-size: 1.2em;
+    border-radius: 5%;
+}
+.skillPercent{
+    width: 100%;
+    border: 1px solid black;
+    background-color: blue;
+    color: white;
+}
+.skill{
+    width: 70px;
 }
