--- a/Css/style.css
+++ b/Css/style.css
@@ -81,8 +81,13 @@ a:hover{
     background-color: rgb(57, 115, 150);
     margin: 5px;
     border: 1px solid black;
-    border-radius: 10%;
     transition: 1s ease-in-out;
+}
+.ed1{
+    margin-top: 20px;
+}
+.edTitle{
+    margin-bottom: 10px;
 }
 .hide{
     display: none !important;
@@ -95,7 +100,6 @@ a:hover{
     background-color:rgb(44, 118, 216);
     color:white;
     font-size: 1.2em;
-    border-radius: 5%;
 }
 /* skill */
 .skillPercent{
