--- a/Css/style.css
+++ b/Css/style.css
@@ -7,10 +7,16 @@ body{
     background-size: cover;
 }
 a{
-    color:white;
+    color:var(--thirdColor);
 }
 a:hover{
-    color: antiquewhite;
+    color: var(--returnBtn);
+}
+:root{
+    --mainColor:rgba(26, 141, 170, 0.352);
+    --thirdColor:rgb(0, 0, 0);
+    --secondColor:rgb(169, 174, 188);
+    --returnBtn:rgb(249, 254, 0);
 }
 /* Social */
 .socialDiv{
@@ -21,7 +27,7 @@ a:hover{
     display: flex;
     align-items: end;
     justify-content: end;    
-    background-color: rgba(255, 255, 255, 0);
+    background-color:var(--mainColor) ;
 }
 .socLinks{
     display: flex;
@@ -41,6 +47,8 @@ a:hover{
 }
 .returnImg{
     width: 30px;
+    background-color: var(--returnBtn);
+    border-radius: 50%;
 }
 /* My Img */
 .myImg{
@@ -78,7 +86,7 @@ a:hover{
     height: 100%;
     text-align: start;
     padding: 5px;
-    background-color: rgb(57, 115, 150);
+    background-color: var(--mainColor);
     margin: 5px;
     border: 1px solid black;
     transition: 1s ease-in-out;
@@ -100,6 +108,27 @@ a:hover{
     background-color:rgb(44, 118, 216);
     color:white;
     font-size: 1.2em;
+}
+.myInfo{
+    color: var(--thirdColor);
+}
+.b1{
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hobbyes{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: var(--thirdColor);
 }
 /* skill */
 .skillPercent{
