--- a/Css/style.css
+++ b/Css/style.css
@@ -15,7 +15,7 @@ a:hover{
 :root{
     --mainColor:rgba(26, 141, 170, 0.352);
     --thirdColor:rgb(0, 0, 0);
-    --secondColor:rgb(169, 174, 188);
+    --secondColor:rgb(255, 255, 255);
     --returnBtn:rgb(249, 254, 0);
 }
 /* Social */
@@ -27,7 +27,7 @@ a:hover{
     display: flex;
     align-items: end;
     justify-content: end;    
-    background-color:var(--mainColor) ;
+    background-color:var(--secondColor) ;
 }
 .socLinks{
     display: flex;
